# virtual-rust

./: .gitignore  Cargo.toml  LICENSE  README.md  requirement.md
.github/workflows/: codeql.yml
examples/: algorithms.rs  features.rs  fibonacci.rs  hello.rs  with_deps.rs  with_tokio.rs
examples/async_project/: Cargo.toml
examples/async_project/src/: api.rs  main.rs  task.rs
examples/loose_modules/: greeting.rs  main.rs  math.rs
examples/multi_bin/: Cargo.toml
examples/multi_bin/src/: client.rs  health.rs  server.rs
src/: ast.rs  cargo_runner.rs  lexer.rs  lib.rs  long_about.txt  main.rs  parser.rs  token.rs
src/interpreter/: builtins.rs  cast.rs  environment.rs  error.rs  format.rs  methods.rs  mod.rs  pattern.rs  value.rs
vscode-virtual-rust/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
vscode-virtual-rust/src/: codeLens.ts  decoration.ts  detector.ts  extension.ts  runner.ts  shadow.ts
